docker-entry-point support all configuration file variables